testsuite/tests/grammar/invalid_abstract_fields/abstract-overriding-concrete.lkt
import lexer_example

@with_lexer(foo_lexer)
grammar foo_grammar {
    @main_rule main_rule <- ExampleHolder()
}

@abstract class FooNode implements Node[FooNode] {
}

@abstract class BaseExampleHolder : FooNode {
    @parse_field f: FooNode
}

class ExampleHolder : BaseExampleHolder {
    @abstract @parse_field f: FooNode
}

class Example : FooNode implements TokenNode {
}
